@@ -210,6 +210,10 @@
             <control type="group">
                 <width>poster_width</width>
                 <height>900</height>
+                <control type="image">
+                    <texture colordiffuse="Background" border="20">common/box.png</texture>
+                    <visible>Control.IsVisible(58)</visible>
+                </control>
                 <include content="Defs_PosterBack">
                     <param name="pad" value="-10" />
                 </include>
