@@ -3,6 +3,7 @@ LEIA - add extrathumbs to images in info dialog
 Fix bug in postplay nextup showing same thumb
 Add play icon to videoinfo extras
 No scroll on one page
+Fix for mouse on big posters
 
 [B]0.9.13[/B]
 Fixes for plot overlay in extended info actor
